--- a/hello.html
+++ b/hello.html
@@ -1,1 +1,10 @@
-<
+<!DOCTYPE html>
+<html>
+    <meta lang="en">
+<head>
+    <title>Hello </title>
+</head>
+<body>
+    <p> Hello World</p>
+</body>
+</html>
