added h3 on web

--- a/hello.html
+++ b/hello.html
@@ -6,5 +6,6 @@
 <body>
     <h1> I have added this heading on the browser </h1>
     <p> Hello World</p>
+    <h3> i have added h3 on web </h3>
 </body>
 </html>
