--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
 </head>
 <body>
     <h1> I have added this heading on the browser </h1>
+    <h6> i have added h6 on local</h6>
     <p> Hello World</p>
 </body>
 </html>
